# Project-restaurant-waiter-interface

./: CMakeLists.txt  LICENSE  README.md  address.h  destination.h  gui.cpp  menu.h  menuItem.h  order.h  orderitem.cpp  orderitem.h  restaurant.cpp  restaurant.h  serverHandler.cpp  serverHandler.h  testGoogle.cpp  waiter.h
gui_include/: consoleuiobject.h  constants.h  popuphandler.h  popupmenu.h
gui_src/: CMakeLists.txt  menubutton.cpp  popupmenu.cpp  topbar.cpp  uitable.cpp
include/: address.h  consoleuiobject.h  constants.h  destination.h  employee.h  filtered_iterator.h  filtered_unique_iterator.h  mainscreen.h  memoryhandler.h  menu.h  menubutton.h  menuitem.h  order.h  orderitem.h  popuphandler.h  popupmenu.h  remote.h  restaurant.h  serverhandler.h  table.h  topbar.h  uitable.h  waiter.h
memoryHandlerConf/: beverages.csv  tables.csv  waiters.csv
memoryHandlerTestFiles/: beverages.csv  conf.txt  dishes.csv  tables.csv  waiters.csv
serverHandlerConf/: beverages.csv  conf.txt  dishes.csv
src/: CMakeLists.txt  address.cpp  consoleuiobject.cpp  employee.cpp  mainscreen.cpp  memoryhandler.cpp  menu.cpp  menubutton.cpp  menuitem.cpp  order.cpp  orderitem.cpp  popuphandler.cpp  popupmenu.cpp  restaurant.cpp  table.cpp  topbar.cpp  waiter.cpp
